<resources>
    <string name="app_name">mob-dev-portfolio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Test Quizzer</string>
    <string name="nav_header_subtitle">Test Yourself!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_question_manager">Question Manager</string>
    <string name="question_manager">Question Manager</string>
    <string name="correct_answer_id">Correct Answer ID</string>
    <string name="tag_id">Tag ID</string>
    <string name="back_to_qm">Back to question manager</string>
    <string name="submit_button">Submit Button</string>
    <string name="question_title">Question Title</string>
    <string name="tag_for_question">Tag For Question</string>
    <string name="quiz_categories">Quiz Categories</string>
    <string name="play_quiz">Play Quiz</string>
    <string-array name="correct_answer_options">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_high_scores">View high scores</string>
    <string name="launch_tutorial">Launch Tutorial</string>
</resources>