<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_question_manager"
            android:icon="@drawable/ic_baseline_edit_24"
            android:title="@string/question_manager" />

        <item
            android:id="@+id/nav_quiz_category"
            android:icon="@drawable/ic_baseline_play_arrow_24"
            android:title="@string/play_quiz" />
        <item
            android:id="@+id/nav_high_score"
            android:icon="@drawable/ic_baseline_score_24"
            android:title="@string/view_high_scores" />
    </group>
</menu>