<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_question"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.QuestionManager.AddQMFrag">

    <Spinner
        android:id="@+id/spinnerTagID"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginEnd="52dp"
        android:contentDescription="@string/tag_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <Spinner
        android:id="@+id/spinnerCorrectAnswerID"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:contentDescription="@string/correct_answer_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTagID"
        app:layout_constraintVertical_bias="0.131" />

    <EditText
        android:id="@+id/editTextQuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/question_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCorrectAnswerID"
        app:layout_constraintVertical_bias="0.212" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="205dp"
        android:layout_height="91dp"
        android:text="@string/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextQuestionTitle" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backToQMButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/back_to_qm" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>