<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Fragments.QuestionManager.EditQMFrag">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/backToQMButtonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="@dimen/fab_margin"
                android:clickable="true"
                android:contentDescription="@string/back_to_qm"
                android:ems="10"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editQuestionHelperButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/fab_margin"
                android:clickable="true"
                android:contentDescription="Helper Button"
                android:ems="10"
                android:src="@drawable/ic_launcher_foreground" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editQuestionDeleteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/fab_margin"
                android:clickable="true"
                android:contentDescription="Helper Button"
                android:ems="10"
                android:src="@drawable/ic_baseline_delete_forever_24" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Tag for question:" />

            <Spinner
                android:id="@+id/spinnerTagEditID"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:contentDescription="@string/tag_for_question"
                android:ems="10" />

            <Button
                android:id="@+id/addTagButtonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/purple_500"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="Add tag"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.75"
                android:text="Question Title:" />

            <EditText
                android:id="@+id/editTextQuestionTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/question_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 1:" />

            <EditText
                android:id="@+id/editTextAnswer1Edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="Answer 1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 2:" />

            <EditText
                android:id="@+id/editTextAnswer2Edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPersonName"
                android:hint="Answer 2"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 3:" />

            <EditText
                android:id="@+id/editTextAnswer3Edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPersonName"
                android:hint="Answer 3"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Answer 4:" />

            <EditText
                android:id="@+id/editTextAnswer4Edit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:inputType="textPersonName"
                android:hint="Answer 4"  />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="Correct Answer Number:" />

            <Spinner
                android:id="@+id/spinnerCorrectAnswerEditID"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:contentDescription="@string/correct_answer_id"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawSelectorOnTop="true"
                android:entries="@array/correct_answer_options"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/submitButtonEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/purple_500"
                android:ems="10"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/submit_button"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>